# dl

./: .gitmodules
.github/workflows/: arduino-lint.yml  build-software-cmake.yml  build-software-windows-ucrt64.yml  build-software-windows-ucrt64.yml.disabled  build-software-x86-test.yml  build-software.yml  codacy.yml  codeql.yml  flawfinder.yml  test.yml  veracode.yml
software/: CMakeLists.txt  build.sh
software/cmake/: Findargp.cmake  i386-linux-toolchain.cmake
software/src/: args.c  args.h  digilivolo.c  digilivolo.h  usb_func.c  usb_func.h
